# ai-lab

./: .gitignore  compose.yml  docker-compose.yml  makefile  ollama_chat.py  requirements.txt  test.py
docs/: models.draw.io.xml
main/: Dockerfile  README.md  pyproject.toml
main/apps/core/: models.py
main/apps/core/fixtures/: Site.yaml  User.yaml
main/apps/core/tests/: data_dump.sh  data_reset.sh
main/apps/llm_test/: actions.py  admin.py  apps.py  models.py  signals.py  tasks.py  utils.py
main/apps/llm_test/fixtures/: LLM.yaml  LLMVersion.yaml  Provider.yaml  Tag.yaml  Test.yaml  TestVersion.yaml
main/apps/llm_test/management/commands/: generate_chain_of_apple.py  run_group.py
main/apps/llm_test/migrations/: 0001_initial.py  0002_alter_run_timestamp.py  0002_alter_run_top_k_alter_run_top_p.py  0003_alter_runlog_timestamp.py  0003_rule_remove_historicaltest_order_remove_test_order_and_more.py  0004_runrule_delete_testversionrule.py  0005_remove_run_manual_check_runattempt_manual_check_and_more.py  0006_rungroup_run_group.py
main/apps/llm_test/tests/: data_dump.sh  data_reset.sh
main/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
main/utils/: test_data_dump.sh  test_data_reset.sh
utils/: nginx.conf.example
