[project]
name = "ai-lab-backend"
version = "0.0.1"
description = "AI Lab - Backend Service"
readme = "README.md"
requires-python = ">=3.12, <4"
maintainers = [
  {name = "Andrey Omelyanuk", email = "omelyanukandrey@gmail.com"}
]
dependencies = [
    # 30.07.2025 - upgraded to latest versions
    "uuid7            ~= 0.1.0"     , # This module implements the version 7 UUIDs
    "celery[redis]    ~= 5.5.3"     , # Distributed Task Queue.
    "psycopg[binary]  ~= 3.2.9"     , # PostgreSQL database adapter for Python.
    "granian          ~= 2.4.2"     , # Granian is a Rust HTTP server for Python applications built on top of Hyper and Tokio.
    "whitenoise       ~= 6.9.0"     , # Radically simplified static file serving for Python web apps
    "langchain           ~= 0.3.27" , # LangChain is a framework for building applications powered by language models.
    "langchain-community ~= 0.3.27" , # LangChain Community is a collection of community-maintained modules for LangChain.
    "langchain-core      ~= 0.3.72" , # LangChain Core is the core library for LangChain.
    "langchain-ollama    ~= 0.3.6"  , # LangChain Ollama is a library for using Ollama with LangChain.
    # -------------------------------------------------------------------------------------------------
    # Django and Django Extensions
    # 30.07.2025 - upgraded to latest versions
    "django                 ~= 5.2.4"   , # Django is a high-level Python web framework that encourages rapid development and clean, pragmatic design.
    "django-allauth         ~= 65.10.0" , # Integrated set of Django applications addressing authentication, registration, account management as well as 3rd party (social) account authentication.
    "djangorestframework    ~= 3.16.0"  , # Web APIs for Django, made easy.
    "django-environ         ~= 0.12.0"  , # Django-environ is a library that allows you to use environment variables in your Django settings.
    "django-celery-results  ~= 2.6.0"   , # This extension enables you to store Celery task results using the Django ORM.
    "django-celery-beat     ~= 2.8.1"   , # Database-backed Periodic Tasks.
    "django-cors-headers    ~= 4.7.0"   , # for handling the server headers required for Cross-Origin Resource Sharing (CORS).
    "django-extensions      ~= 4.1"     , # Django Extensions is a collection of custom extensions for the Django Framework.
    "django-mptt            ~= 0.17.0"  , # MPTT is a technique for storing hierarchical data in a database. The aim is to make retrieval operations very efficient.
    "django-simple-history  ~= 3.10.1"  , # Store model history and view/revert changes from admin site.
    "django-minio-backend   ~= 3.8.0"   , # Django storage backend for MinIO. 
    "drf-flex-fields        ~= 1.0.2"   , # Flexible, dynamic fields and nested resources for Django REST Framework serializers.
    # -------------------------------------------------------------------------------------------------
    # Dev Utils and Tools that still need to be installed in production
    # 30.07.2025 - upgraded to latest versions
    "django-debug-toolbar    ~= 6.0.0"    , # A configurable set of panels that display various debug information about the current request/response.
    "flower                  ~= 2.0.1"    , # Flower is a web based tool for monitoring and administrating Celery clusters.
    "sqlparse                ~= 0.5.3"    , # A non-validating SQL parser module for Python.
    "pygments                ~= 2.19.2"   , # Pygments is a syntax highlighting package written in Python.
]

[dependency-groups]
dev = [
    # 30.07.2025 - upgraded to latest versions
    "granian[reload]        ~= 2.4.2"  , # Granian is a Rust HTTP server for Python applications built on top of Hyper and Tokio.
    "ruff                   ~= 0.12.7" , # Ruff is a fast, opinionated, and configurable Python linter.
]
test = [
    # 30.07.2025 - upgraded to latest versions
    "pytest                 ~= 8.4.1"  , # The framework makes it easy to write small tests, yet scales to support complex functional testing for applications and libraries.
    "pytest-mock            ~= 3.14.1" , # Thin-wrapper around the mock package for easier use with pytest
    "pytest-cov             ~= 6.2.1"  , # This plugin produces coverage reports.
    "pytest-xdist[psutil]   ~= 3.8.0"  , # Run test in parallel.
    "pytest-django          ~= 4.11.1" , # Pytest-django is a plugin for pytest that provides a Django test runner and a Django database backend.
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"

[tool.ruff]
include = ["**.py"]
extend-exclude = ["migrations", "static"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D103",     # Missing docstring in public method
    "D104",     # Missing docstring in public function
    "D203",     # Missing return type
    "D212",     # Missing return type
    "COM812",   # Missing return type
]

[tool.ruff.lint.per-file-ignores]
"*/tests/**.py" = ["S101"]
